# Voronoi

./: .gitignore  AUTHORS  CMakeLists.txt  LICENSE  Makefile  README.md  VoronoiDrawer.py  configure
include/: macros.hh  viewer.hh
include/dcel/: EdgeIterator.hh  Exception.hh  Face.hh  HalfEdge.hh  Vertex.hh  dcel.hh
include/voronoi/: diagram.hh  face.hh  geometry.hh  point.hh  queue.hh  rbtree.hh  status.hh  tree.hh  voronoi.hh  voronoitree.hh
src/: CMakeLists.txt  core.cc  core.cpp  hardcoded.cc  viewer.cc
src/voronoi/: CMakeLists.txt  diagram.cc  point.cc  queue.cc  status.cc  tree.cc  voronoi.cc
test/: CMakeLists.txt  dcel_check.cc  main.cc  sanity_check.cpp  tree.cc
tree_test/: CMakeLists.txt  tree_test.cc
viewer_example/: CMakeLists.txt  dcel_maker.cc  test.hh  viewer_test.cc
